@@ -1,3 +1,7 @@
+2008-03-10  Tim Waugh  <twaugh@redhat.com>
+
+	* Makefile (PYTHONVERS): Removed.
+
 2008-03-05  Norm Jacobs <Norm.Jacobs@Sun.COM>
 
         * cupsppd.c (getline): emulate getline() for systems without it.
